(@bug W-3226111@) Increase the default proxy heap size to 2GB and use G1 GC
This change does:
1) Use 2GB as default heap size for proxy
2) Use G1 GC and also the same set of GC params for proxy as is being used in vpod
3) Enable date times tamps in bookie GC logs.

The proxy changes will be made to "bookkeeper-proxy/bin/bkproxy.sh" script. Since
sfstore-in-a-box uses this script, this will change its default heap space. Jenkins
uses sfstore-in-a-box, so it should run with 2GB heap space after this check-in.